Fix offscreen class positioning

--- a/src/visibility.css
+++ b/src/visibility.css
@@ -11,7 +11,7 @@
 }
 
 .offscreen {
-    position: absolute !important;
+    position: fixed !important;
     top: 0 !important;
     left: 0 !important;
     transform: translate(-100%, -100%) !important;
